add supports for quanah
