# openapi_server/models/request_metrics.py
@@ -11,6 +11,9 @@ from openapi_server.models.request_metrics_targets import RequestMetricsTargets
 from openapi_server.models.time_range import TimeRange
 from openapi_server import util
 
+from openapi_server.models.request_metrics_scoped_vars import RequestMetricsScopedVars  # noqa: E501
+from openapi_server.models.request_metrics_targets import RequestMetricsTargets  # noqa: E501
+from openapi_server.models.time_range import TimeRange  # noqa: E501
 
 class RequestMetrics(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -18,11 +21,13 @@ class RequestMetrics(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, app=None, dashboard_id=None, interval=None, interval_ms=None, max_data_points=None, panel_id=None, range=None, range_raw=None, request_id=None, scoped_vars=None, targets=None, time_info=None, timezone=None):  # noqa: E501
+    def __init__(self, app=None, aggregation=None, dashboard_id=None, interval=None, interval_ms=None, max_data_points=None, panel_id=None, partition=None, range=None, range_raw=None, request_id=None, scoped_vars=None, targets=None, time_info=None, timezone=None):  # noqa: E501
         """RequestMetrics - a model defined in OpenAPI
 
         :param app: The app of this RequestMetrics.  # noqa: E501
         :type app: str
+        :param aggregation: The aggregation of this RequestMetrics.  # noqa: E501
+        :type aggregation: str
         :param dashboard_id: The dashboard_id of this RequestMetrics.  # noqa: E501
         :type dashboard_id: float
         :param interval: The interval of this RequestMetrics.  # noqa: E501
@@ -33,6 +38,8 @@ class RequestMetrics(Model):
         :type max_data_points: float
         :param panel_id: The panel_id of this RequestMetrics.  # noqa: E501
         :type panel_id: float
+        :param partition: The partition of this RequestMetrics.  # noqa: E501
+        :type partition: str
         :param range: The range of this RequestMetrics.  # noqa: E501
         :type range: TimeRange
         :param range_raw: The range_raw of this RequestMetrics.  # noqa: E501
@@ -50,11 +57,13 @@ class RequestMetrics(Model):
         """
         self.openapi_types = {
             'app': str,
+            'aggregation': str,
             'dashboard_id': float,
             'interval': str,
             'interval_ms': float,
             'max_data_points': float,
             'panel_id': float,
+            'partition': str,
             'range': TimeRange,
             'range_raw': TimeRange,
             'request_id': str,
@@ -66,11 +75,13 @@ class RequestMetrics(Model):
 
         self.attribute_map = {
             'app': 'app',
+            'aggregation': 'aggregation',
             'dashboard_id': 'dashboardId',
             'interval': 'interval',
             'interval_ms': 'intervalMs',
             'max_data_points': 'maxDataPoints',
             'panel_id': 'panelId',
+            'partition': 'partition',
             'range': 'range',
             'range_raw': 'rangeRaw',
             'request_id': 'requestId',
@@ -81,11 +92,13 @@ class RequestMetrics(Model):
         }
 
         self._app = app
+        self._aggregation = aggregation
         self._dashboard_id = dashboard_id
         self._interval = interval
         self._interval_ms = interval_ms
         self._max_data_points = max_data_points
         self._panel_id = panel_id
+        self._partition = partition
         self._range = range
         self._range_raw = range_raw
         self._request_id = request_id
@@ -127,6 +140,33 @@ class RequestMetrics(Model):
             raise ValueError("Invalid value for `app`, must not be `None`")  # noqa: E501
 
         self._app = app
+
+    @property
+    def aggregation(self):
+        """Gets the aggregation of this RequestMetrics.
+
+
+        :return: The aggregation of this RequestMetrics.
+        :rtype: str
+        """
+        return self._aggregation
+
+    @aggregation.setter
+    def aggregation(self, aggregation):
+        """Sets the aggregation of this RequestMetrics.
+
+
+        :param aggregation: The aggregation of this RequestMetrics.
+        :type aggregation: str
+        """
+        allowed_values = ["min", "max", "mean", "median"]  # noqa: E501
+        if aggregation not in allowed_values:
+            raise ValueError(
+                "Invalid value for `aggregation` ({0}), must be one of {1}"
+                .format(aggregation, allowed_values)
+            )
+
+        self._aggregation = aggregation
 
     @property
     def dashboard_id(self):
@@ -242,6 +282,33 @@ class RequestMetrics(Model):
             raise ValueError("Invalid value for `panel_id`, must not be `None`")  # noqa: E501
 
         self._panel_id = panel_id
+
+    @property
+    def partition(self):
+        """Gets the partition of this RequestMetrics.
+
+
+        :return: The partition of this RequestMetrics.
+        :rtype: str
+        """
+        return self._partition
+
+    @partition.setter
+    def partition(self, partition):
+        """Sets the partition of this RequestMetrics.
+
+
+        :param partition: The partition of this RequestMetrics.
+        :type partition: str
+        """
+        allowed_values = ["nocona", "quanah"]  # noqa: E501
+        if partition not in allowed_values:
+            raise ValueError(
+                "Invalid value for `partition` ({0}), must be one of {1}"
+                .format(partition, allowed_values)
+            )
+
+        self._partition = partition
 
     @property
     def range(self):
