# openapi_server/openapi/openapi.yaml
@@ -38,6 +38,9 @@ paths:
         required: true
         schema:
           default: nocona
+          enum:
+          - nocona
+          - quanah
           example: nocona
           type: string
         style: simple
@@ -194,7 +197,7 @@ paths:
                 $ref: '#/components/schemas/inline_response_default'
           description: default error
       summary: Query Metrics for Web Applications
-      x-openapi-router-controller:  openapi_server.controllers.default_controller
+      x-openapi-router-controller: openapi_server.controllers.default_controller
   /query:
     post:
       description: Execute queries for metrics, job information, etc.
@@ -204,11 +207,13 @@ paths:
           application/json:
             example:
               app: dashboard
+              aggregation: max
               dashboardId: 5
               interval: 15s
               intervalMs: 15000
               maxDataPoints: 5773
               panelId: 2
+              partition: nocona
               range:
                 from: 2022-04-16T10:00:00.000Z
                 to: 2022-04-16T12:00:00.000Z
@@ -272,7 +277,7 @@ paths:
                 $ref: '#/components/schemas/inline_response_default'
           description: default error
       summary: Query Metrics for Grafana Plugins
-      x-openapi-router-controller:  openapi_server.controllers.default_controller
+      x-openapi-router-controller: openapi_server.controllers.default_controller
   /queue:
     get:
       operationId: queue
@@ -345,7 +350,7 @@ paths:
                 $ref: '#/components/schemas/inline_response_default'
           description: default error
       summary: Get Queue Status of Slurm
-      x-openapi-router-controller:  openapi_server.controllers.default_controller
+      x-openapi-router-controller: openapi_server.controllers.default_controller
   /search:
     get:
       description: Return available metrics of iDRAC and Slurm
@@ -361,7 +366,6 @@ paths:
           enum:
           - quanah
           - nocona
-          # - matador
           example: cocona
           type: string
         style: form
@@ -397,7 +401,7 @@ paths:
                 $ref: '#/components/schemas/inline_response_default'
           description: default error
       summary: Get Available Metric Names for Grafana Plugins
-      x-openapi-router-controller:  openapi_server.controllers.default_controller
+      x-openapi-router-controller: openapi_server.controllers.default_controller
 components:
   responses:
     DefaultError:
@@ -525,6 +529,7 @@ components:
         range:
           from: from
           to: to
+        aggregation: min
         targets:
         - nodes:
           - nodes
@@ -551,6 +556,7 @@ components:
           - users
           required: true
         intervalMs: 6.027456183070403
+        partition: nocona
         timeInfo: timeInfo
         dashboardId: 0.8008281904610115
         requestId: requestId
@@ -561,6 +567,14 @@ components:
       properties:
         app:
           title: app
+          type: string
+        aggregation:
+          enum:
+          - min
+          - max
+          - mean
+          - median
+          title: aggregation
           type: string
         dashboardId:
           title: dashboardId
@@ -577,6 +591,12 @@ components:
         panelId:
           title: panelId
           type: number
+        partition:
+          enum:
+          - nocona
+          - quanah
+          title: partition
+          type: string
         range:
           $ref: '#/components/schemas/TimeRange'
         rangeRaw:
